@@ -180,6 +180,8 @@ nor t.
 
 +++
 ** New user option 'read-minibuffer-restore-windows'.
+When customized to nil, it uses 'minibuffer-restore-windows' in
+'minibuffer-exit-hook' to remove only the *Completions* window.
 
 +++
 ** New system for displaying documentation for groups of functions.
@@ -1247,6 +1249,10 @@ This change is for better compatibility with old versions of non-GNU
 *** New utility function 'grep-file-at-point'.
 This returns the name of the file at point (if any) in 'grep-mode'
 buffers.
+
+---
+*** The variable 'grep-program' is a user option now.
+It provides a choice that supports 'ripgrep'.
 
 ** Help
 
